--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "bmad-method": "^4.39.2",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linear-gradient": "~14.1.5",
@@ -17,6 +18,7 @@
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.2.0",
+    "glob": "^11.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
