--- a/backend/package.json
+++ b/backend/package.json
@@ -10,29 +10,35 @@
     "lint": "eslint . --ext .ts",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["spotify", "api", "playlist", "music"],
+  "keywords": [
+    "spotify",
+    "api",
+    "playlist",
+    "music"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "spotify-web-api-node": "^5.0.2",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
-    "mongoose": "^8.0.3",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "axios": "^1.6.2",
-    "express-validator": "^7.0.1"
+    "mongoose": "^8.0.3",
+    "openai": "^5.12.2",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/spotify-web-api-node": "^5.0.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "@types/spotify-web-api-node": "^5.0.11",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
