--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^4.5.7",
     "bmad-method": "^4.39.2",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
