--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/slider": "^4.5.7",
     "bmad-method": "^4.39.2",
     "expo": "~53.0.20",
+    "expo-blur": "^14.1.5",
     "expo-constants": "~17.1.7",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
