--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -33,6 +34,7 @@
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
+    "@types/connect-mongo": "^3.1.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
