--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "openai": "^5.12.2",
+    "pino": "^9.9.0",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
+    "pino-pretty": "^13.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
