feat: Complete Docker setup for backend deployment
- Add multi-stage Dockerfile with optimized Node.js Alpine image
- Create docker-compose.yml with backend and MongoDB services
- Add production docker-compose.prod.yml with resource limits
- Implement health checks for both services
- Create .dockerignore to exclude unnecessary files
- Update init-mongo.js to use environment variables
- Fix logger to handle production environment without pino-pretty
- Remove forced authSource override in database connection
- Add Docker management scripts to package.json
- Include comprehensive Docker deployment documentation
- Add docker.env.example template for Docker configuration
- Update .gitignore to exclude .env.production

Security improvements:
- Run backend as non-root user (nodejs:1001)
- Enable MongoDB authentication
- Use environment variables for all secrets
- Proper network isolation between services

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,14 +8,17 @@ SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 SPOTIFY_REDIRECT_URI=http://localhost:3000/auth/callback
 
 # Database Configuration
+# For local development without Docker:
 MONGODB_URI=mongodb://localhost:27017/spotyme
-# For Docker deployment:
+# For Docker Compose (will be automatically set in docker-compose.yml):
+# MONGODB_URI=mongodb://spotyme_user:spotyme_pass@mongodb:27017/spotyme?authSource=spotyme
+
+# Docker MongoDB Configuration
 MONGO_ROOT_USERNAME=admin
-MONGO_ROOT_PASSWORD=your_secure_mongo_password_here
+MONGO_ROOT_PASSWORD=your_secure_mongo_root_password_here
 MONGO_DATABASE=spotyme
-# Mongo Express credentials
-MONGO_EXPRESS_USERNAME=admin
-MONGO_EXPRESS_PASSWORD=your_secure_express_password_here
+MONGO_USER=spotyme_user
+MONGO_PASSWORD=your_secure_mongo_password_here
 
 # Session Configuration
 SESSION_SECRET=your_session_secret_here
