--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -1,19 +1,19 @@
+version: '3.8'
+
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ${DOCKER_REGISTRY:-docker.io}/${DOCKER_IMAGE:-spotyme-backend}:${VERSION:-latest}
     container_name: spotyme-backend
-    restart: always
+    restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:3000"
     environment:
       # Server Configuration
       PORT: 3000
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: production
       
       # MongoDB Configuration
-      MONGODB_URI: mongodb://${MONGO_USER:-spotyme_user}:${MONGO_PASSWORD:-spotyme_pass}@mongodb:27017/${MONGO_DATABASE:-spotyme}?authSource=spotyme
+      MONGODB_URI: ${MONGODB_URI}
       
       # Spotify API Credentials
       SPOTIFY_CLIENT_ID: ${SPOTIFY_CLIENT_ID}
@@ -22,14 +22,14 @@ services:
       
       # Session Configuration
       SESSION_SECRET: ${SESSION_SECRET}
-      SESSION_STORE_SECRET: ${SESSION_STORE_SECRET:-${SESSION_SECRET}}
+      SESSION_STORE_SECRET: ${SESSION_STORE_SECRET}
       
       # JWT Configuration
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRY: ${JWT_EXPIRY:-7d}
       
       # Frontend URL (for CORS)
-      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:8081}
+      FRONTEND_URL: ${FRONTEND_URL}
       
       # OpenAI Configuration
       OPENAI_API_KEY: ${OPENAI_API_KEY}
@@ -47,23 +47,31 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 256M
 
   mongodb:
     image: mongo:7.0
     container_name: spotyme-mongo
-    restart: always
+    restart: unless-stopped
     ports:
-      - "27017:27017"
+      - "127.0.0.1:27017:27017"  # Only bind to localhost in production
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME:-admin}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-spotyme}
-      # Pass user credentials to init script
-      MONGO_USER: ${MONGO_USER:-spotyme_user}
-      MONGO_PASSWORD: ${MONGO_PASSWORD:-spotyme_pass}
+      MONGO_USER: ${MONGO_USER}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
     volumes:
       - mongo-data:/data/db
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - mongo-backup:/backup  # Add backup volume
     networks:
       - spotyme-network
     healthcheck:
@@ -72,11 +80,26 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 1G
+        reservations:
+          cpus: '1'
+          memory: 512M
+    command: ["--auth", "--bind_ip_all"]  # Enable authentication and bind to all IPs
 
 volumes:
   mongo-data:
+    driver: local
+  mongo-backup:
     driver: local
 
 networks:
   spotyme-network:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
