--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,17 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:clean": "docker-compose down -v",
+    "docker:rebuild": "docker-compose down && docker-compose build --no-cache && docker-compose up -d",
+    "docker:push": "docker build -t spotyme-backend . && echo 'Ready to push: docker push <your-registry>/spotyme-backend:latest'",
+    "docker:prod": "docker-compose --env-file .env.production up -d",
+    "docker:prod:rebuild": "docker-compose down -v && docker-compose --env-file .env.production build --no-cache && docker-compose --env-file .env.production up -d",
+    "docker:prod:logs": "docker-compose --env-file .env.production logs -f"
   },
   "keywords": [
     "spotify",
