--- a/backend/docker-compose.dokploy.yml
+++ b/backend/docker-compose.dokploy.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -11,29 +9,31 @@ services:
       # Server Configuration
       PORT: 3000
       NODE_ENV: production
-      
-      # MongoDB Configuration - Internal connection
-      MONGODB_URI: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017/spotyme?authSource=admin
-      
+
+      # MongoDB Configuration - External MongoDB Atlas or other MongoDB service
+      # Format: mongodb+srv://username:password@cluster.mongodb.net/database
+      # Or: mongodb://username:password@host:port/database
+      MONGODB_URI: ${MONGODB_URI}
+
       # Spotify API Credentials
       SPOTIFY_CLIENT_ID: ${SPOTIFY_CLIENT_ID}
       SPOTIFY_CLIENT_SECRET: ${SPOTIFY_CLIENT_SECRET}
       SPOTIFY_REDIRECT_URI: ${SPOTIFY_REDIRECT_URI}
-      
+
       # Session Configuration
       SESSION_SECRET: ${SESSION_SECRET}
-      SESSION_STORE_SECRET: ${SESSION_STORE_SECRET}
-      
+      SESSION_STORE_SECRET: ${SESSION_STORE_SECRET:-${SESSION_SECRET}}
+
       # JWT Configuration
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRY: ${JWT_EXPIRY:-7d}
-      
+
       # Frontend URL (for CORS)
       FRONTEND_URL: ${FRONTEND_URL}
-      
+
       # OpenAI Configuration
       OPENAI_API_KEY: ${OPENAI_API_KEY}
-      
+
       # Encryption Configuration
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
     labels:
@@ -51,12 +51,14 @@ services:
       - "traefik.http.routers.spotyme-backend.middlewares=spotyme-cors"
     networks:
       - dokploy-network
-      - spotyme-internal
-    depends_on:
-      mongodb:
-        condition: service_healthy
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"]
+      test:
+        [
+          "CMD",
+          "node",
+          "-e",
+          "require('http').get('http://localhost:3000/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -64,53 +66,12 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: "1"
           memory: 512M
         reservations:
-          cpus: '0.5'
+          cpus: "0.5"
           memory: 256M
-
-  mongodb:
-    image: mongo:7.0
-    container_name: spotyme-mongo
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-spotyme}
-      MONGO_USER: ${MONGO_USER}
-      MONGO_PASSWORD: ${MONGO_PASSWORD}
-    volumes:
-      - mongo-data:/data/db
-      - ./files/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - mongo-backup:/backup
-    networks:
-      - spotyme-internal
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: 1G
-        reservations:
-          cpus: '1'
-          memory: 512M
-    command: ["--auth", "--bind_ip_all"]
-
-volumes:
-  mongo-data:
-    driver: local
-  mongo-backup:
-    driver: local
 
 networks:
   dokploy-network:
     external: true
-  spotyme-internal:
-    driver: bridge
-    internal: true  # Make this network internal-only for security
