--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,8 +14,10 @@
     "@react-native-community/slider": "^4.5.7",
     "bmad-method": "^4.39.2",
     "expo": "~53.0.20",
+    "expo-auth-session": "^6.2.1",
     "expo-blur": "^14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "^14.1.5",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
