Fix Android OAuth redirect issue with dual strategy
- Add HTTPS App Links as primary redirect method for Android
- Keep custom scheme (spotyme://) as fallback
- Add Android App Links verification endpoint
- Update intent filters in app.json with both HTTPS and custom schemes
- Enhance redirect logic with multiple fallback attempts
- Add better error handling and logging in login component

Note: Requires 'expo prebuild --clean' and app rebuild for Android

--- a/app.json
+++ b/app.json
@@ -36,6 +36,21 @@
             "BROWSABLE",
             "DEFAULT"
           ]
+        },
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "api.spotyme.space",
+              "pathPrefix": "/auth/mobile-callback"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ],
       "package": "com.anonymous.spotyme"
