--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,3 +37,12 @@ OPENAI_API_KEY=
 # Encryption Configuration
 # Generate a secure key: openssl rand -hex 32
 ENCRYPTION_KEY=your_32_character_or_longer_encryption_key_here
+
+# Redis Configuration
+# For local development without Docker:
+REDIS_URL=redis://localhost:6379
+# For Docker Compose (will be automatically set in docker-compose.yml):
+# REDIS_URL=redis://redis:6379
+# For production with password:
+# REDIS_URL=redis://:your_redis_password@redis:6379
+REDIS_PASSWORD=your_secure_redis_password_here
