--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "axios": "^1.6.2",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "mongoose": "^8.0.3",
     "openai": "^5.12.2",
     "pino": "^9.9.0",
+    "redis": "^5.8.2",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
