--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^8.0.3",
     "openai": "^5.12.2",
     "pino": "^9.9.0",
+    "rate-limit-redis": "^4.2.2",
     "redis": "^5.8.2",
     "spotify-web-api-node": "^5.0.2"
   },
